# project_clearpath

./: CMakeLists.txt  README.md  do-tests.bash  filtered_coverage.info
.github/workflows/: run-test-and-upload-codecov.yml
app/: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/project_clearpath/lib/pkgconfig/: gmock_main.pc  gtest.pc
install/project_clearpath/share/ament_index/resource_index/package_run_dependencies/: project_clearpath
install/project_clearpath/share/project_clearpath/: local_setup.sh  package.sh  package.xml
install/project_clearpath/share/project_clearpath/launch/: spawn_tbot3_custom.py
launch/: collector_robot.launch.py  spawn_trash.launch.py
libs/debris/: CMakeLists.txt  debris_detection.hpp  debris_remover.cpp  debris_remover.hpp
log/: latest_build
test/: CMakeLists.txt  test_level1.cpp  test_level2.cpp
